[package]
name = "gmod"
version = "17.0.0"
authors = ["William Venner <william@venner.io>"]
edition = "2021"
license = "MIT"
description = "A swiss army knife for creating binary modules for Garry's Mod in Rust"
repository = "https://github.com/WilliamVenner/gmod-rs"
keywords = ["gmod", "garrysmod", "module", "glua"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "development-tools",
]

[features]
default = []
gmcl = ["gmod-macros/gmcl"]

[dependencies]
anyhow = "1.0.89"
gmod-macros = { version = "2.0.1", path = "../gmod-macros" }
libloading = "0.8"
